TP5/src/TP5.output
Terminals unused in grammar

   NOIGUAL
   IGUALIGUAL


Rules useless in parser due to conflicts

   29 sentenciaEtiquetada: error

   36 sentenciaIteracion: error

   64 listaDeSentencias: error

   70 sentenciaExpresion: error

   75 $@7: /* vacío */

   78 expresionDeAsignacion: error

   87 listaDeExpresionesInvocacion: error

   90 listaDeExpresiones: error

  113 expresion: error


Estado 1 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 3 conflictos: 36 reducción(ones)/reducción(ones)
Estado 7 conflictos: 1 desplazamiento/reducción, 1 reducción/reducción
Estado 12 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 39 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 52 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 57 conflictos: 38 reducción(ones)/reducción(ones)
Estado 60 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 62 conflictos: 39 reducción(ones)/reducción(ones)
Estado 70 conflictos: 36 reducción(ones)/reducción(ones)
Estado 71 conflictos: 1 desplazamiento/reducción, 1 reducción/reducción
Estado 94 conflictos: 39 reducción(ones)/reducción(ones)
Estado 102 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 127 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 128 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 131 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 132 conflictos: 27 reducción(ones)/reducción(ones)
Estado 133 conflictos: 1 reducción(ones)/reducción(ones)
Estado 140 conflictos: 14 reducción(ones)/reducción(ones)
Estado 146 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 157 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 161 conflictos: 1 reducción(ones)/reducción(ones)
Estado 176 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input sentencia
    3      | input error

    4 numero: NUM
    5       | REAL

    6 $@1: /* vacío */

    7 sentencia: $@1 sentenciaDeclaracion
    8          | sentenciaCompuesta
    9          | sentenciaExpresion
   10          | sentenciaIteracion
   11          | sentenciaEtiquetada
   12          | sentenciaSeleccion
   13          | sentenciaRetorno
   14          | sentenciaSalto
   15          | ';'

   16 sentenciaSalto: BREAK ';'
   17               | CONTINUE ';'

   18 $@2: /* vacío */

   19 sentenciaDeclaracion: TIPO_DATO $@2 parteFinalDeclaracion

   20 $@3: /* vacío */

   21 sentenciaDeclaracion: TOKEN_VOID $@3 sentenciaFuncion
   22                     | error

   23 sentenciaSeleccion: IF '(' expresion ')' sentencia
   24                   | IF '(' expresion ')' sentencia ELSE sentencia
   25                   | SWITCH '(' expresion ')' sentencia
   26                   | error

   27 sentenciaEtiquetada: CASE constante ':' sentencia
   28                    | DEFAULT ':' sentencia
   29                    | error

   30 sentenciaRetorno: RETURN expresion ';'

   31 constante: numero
   32          | CCHAR

   33 sentenciaIteracion: FOR '(' primeraExpresionFor ';' expresionOpcional ';' expresionOpcional ')' sentencia
   34                   | WHILE '(' expresion ')' sentencia
   35                   | DO sentencia WHILE '(' expresion ')' ';'
   36                   | error

   37 primeraExpresionFor: expresion
   38                    | TIPO_DATO ID '=' expresion
   39                    | /* vacío */

   40 expresionOpcional: expresion
   41                  | /* vacío */

   42 parteFinalDeclaracion: declaraId
   43                      | declaraId ',' listaIdentificadores ';'
   44                      | sentenciaFuncion
   45                      | error

   46 $@4: /* vacío */

   47 sentenciaFuncion: ID $@4 '(' listaDeParametros ')' declaracionODefFuncion
   48                 | error

   49 declaracionODefFuncion: ';'
   50                       | sentenciaCompuesta

   51 listaIdentificadores: declaraId ',' listaIdentificadores
   52                     | declaraId
   53                     | error

   54 listaDeParametros: /* vacío */

   55 $@5: /* vacío */

   56 listaDeParametros: TIPO_DATO ID $@5 ',' listaDeParametros
   57                  | TIPO_DATO ID
   58                  | error

   59 sentenciaCompuesta: '{' listaDeSentencias '}'
   60                   | error

   61 listaDeSentencias: sentencia listaDeSentencias
   62                  | sentencia
   63                  | /* vacío */
   64                  | error

   65 opAsignacion: MENOSIGUAL
   66             | MASIGUAL
   67             | PORIGUAL
   68             | DIVIDIDOIGUAL

   69 sentenciaExpresion: listaDeExpresiones ';'
   70                   | error

   71 $@6: /* vacío */

   72 invocacionFuncion: ID $@6 segundaParteInvocacion
   73                  | error

   74 segundaParteInvocacion: '(' ')'

   75 $@7: /* vacío */

   76 segundaParteInvocacion: $@7 '(' listaDeExpresionesInvocacion ')' ';'

   77 expresionDeAsignacion: ID opAsignacionGeneral listaDeExpresiones
   78                      | error

   79 opAsignacionGeneral: '='
   80                    | opAsignacion

   81 declaraId: ID
   82          | ID '=' expresion
   83          | error

   84 listaDeExpresionesInvocacion: expresion

   85 $@8: /* vacío */

   86 listaDeExpresionesInvocacion: expresion $@8 ',' listaDeExpresionesInvocacion
   87                             | error

   88 listaDeExpresiones: expresion
   89                   | expresion ',' listaDeExpresiones
   90                   | error

   91 expresion: constante
   92          | LITERALCADENA
   93          | ID
   94          | expresionDeAsignacion
   95          | expresion '+' expresion
   96          | expresion '-' expresion
   97          | expresion '*' expresion
   98          | expresion '/' expresion
   99          | expresionUnaria
  100          | expresion '^' expresion
  101          | '(' expresion ')'
  102          | opPreDecremento
  103          | opPreIncremento
  104          | opPostDecremento
  105          | opPostIncremento
  106          | expresion YLOGICO expresion
  107          | expresion OLOGICO expresion
  108          | expresion '<' expresion
  109          | expresion '>' expresion
  110          | expresion MENORIGUAL expresion
  111          | expresion MAYORIGUAL expresion
  112          | invocacionFuncion
  113          | error

  114 opPostDecremento: expresion OP_DECREMENTO

  115 opPreDecremento: OP_DECREMENTO ID

  116 opPostIncremento: ID OP_INCREMENTO

  117 opPreIncremento: OP_INCREMENTO ID

  118 expresionUnaria: '-' expresion


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 23 24 25 33 34 35 47 74 76 101
')' (41) 23 24 25 33 34 35 47 74 76 101
'*' (42) 97
'+' (43) 95
',' (44) 43 51 56 86 89
'-' (45) 96 118
'/' (47) 98
':' (58) 27 28
';' (59) 15 16 17 30 33 35 43 49 69 76
'<' (60) 108
'=' (61) 38 79 82
'>' (62) 109
'^' (94) 100
'{' (123) 59
'}' (125) 59
error (256) 3 22 26 29 36 45 48 53 58 60 64 70 73 78 83 87 90 113
CCHAR (258) 32
NUM (259) 4
LITERALCADENA (260) 92
ID (261) 38 47 56 57 72 77 81 82 93 115 116 117
TIPO_DATO (262) 19 38 56 57
REAL (263) 5
TOKEN_VOID (264) 21
FOR (265) 33
IF (266) 23 24
WHILE (267) 34 35
DO (268) 35
CASE (269) 27
DEFAULT (270) 28
SWITCH (271) 25
ELSE (272) 24
RETURN (273) 30
BREAK (274) 16
CONTINUE (275) 17
OP_DECREMENTO (276) 114 115
OP_INCREMENTO (277) 116 117
MAYORIGUAL (278) 111
MENORIGUAL (279) 110
NOIGUAL (280)
IGUALIGUAL (281)
YLOGICO (282) 106
OLOGICO (283) 107
DIVIDIDOIGUAL (284) 68
PORIGUAL (285) 67
MENOSIGUAL (286) 65
MASIGUAL (287) 66


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
input (49)
    en la izquierda: 1 2 3, en la derecha: 0 2 3
numero (50)
    en la izquierda: 4 5, en la derecha: 31
sentencia (51)
    en la izquierda: 7 8 9 10 11 12 13 14 15, en la derecha: 2 23 24
    25 27 28 33 34 35 61 62
$@1 (52)
    en la izquierda: 6, en la derecha: 7
sentenciaSalto (53)
    en la izquierda: 16 17, en la derecha: 14
sentenciaDeclaracion (54)
    en la izquierda: 19 21 22, en la derecha: 7
$@2 (55)
    en la izquierda: 18, en la derecha: 19
$@3 (56)
    en la izquierda: 20, en la derecha: 21
sentenciaSeleccion (57)
    en la izquierda: 23 24 25 26, en la derecha: 12
sentenciaEtiquetada (58)
    en la izquierda: 27 28 29, en la derecha: 11
sentenciaRetorno (59)
    en la izquierda: 30, en la derecha: 13
constante (60)
    en la izquierda: 31 32, en la derecha: 27 91
sentenciaIteracion (61)
    en la izquierda: 33 34 35 36, en la derecha: 10
primeraExpresionFor (62)
    en la izquierda: 37 38 39, en la derecha: 33
expresionOpcional (63)
    en la izquierda: 40 41, en la derecha: 33
parteFinalDeclaracion (64)
    en la izquierda: 42 43 44 45, en la derecha: 19
sentenciaFuncion (65)
    en la izquierda: 47 48, en la derecha: 21 44
$@4 (66)
    en la izquierda: 46, en la derecha: 47
declaracionODefFuncion (67)
    en la izquierda: 49 50, en la derecha: 47
listaIdentificadores (68)
    en la izquierda: 51 52 53, en la derecha: 43 51
listaDeParametros (69)
    en la izquierda: 54 56 57 58, en la derecha: 47 56
$@5 (70)
    en la izquierda: 55, en la derecha: 56
sentenciaCompuesta (71)
    en la izquierda: 59 60, en la derecha: 8 50
listaDeSentencias (72)
    en la izquierda: 61 62 63 64, en la derecha: 59 61
opAsignacion (73)
    en la izquierda: 65 66 67 68, en la derecha: 80
sentenciaExpresion (74)
    en la izquierda: 69 70, en la derecha: 9
invocacionFuncion (75)
    en la izquierda: 72 73, en la derecha: 112
$@6 (76)
    en la izquierda: 71, en la derecha: 72
segundaParteInvocacion (77)
    en la izquierda: 74 76, en la derecha: 72
$@7 (78)
    en la izquierda: 75, en la derecha: 76
expresionDeAsignacion (79)
    en la izquierda: 77 78, en la derecha: 94
opAsignacionGeneral (80)
    en la izquierda: 79 80, en la derecha: 77
declaraId (81)
    en la izquierda: 81 82 83, en la derecha: 42 43 51 52
listaDeExpresionesInvocacion (82)
    en la izquierda: 84 86 87, en la derecha: 76 86
$@8 (83)
    en la izquierda: 85, en la derecha: 86
listaDeExpresiones (84)
    en la izquierda: 88 89 90, en la derecha: 69 77 89
expresion (85)
    en la izquierda: 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111 112 113, en la derecha: 23 24 25 30
    34 35 37 38 40 82 84 86 88 89 95 96 97 98 100 101 106 107 108 109
    110 111 114 118
opPostDecremento (86)
    en la izquierda: 114, en la derecha: 104
opPreDecremento (87)
    en la izquierda: 115, en la derecha: 102
opPostIncremento (88)
    en la izquierda: 116, en la derecha: 105
opPreIncremento (89)
    en la izquierda: 117, en la derecha: 103
expresionUnaria (90)
    en la izquierda: 118, en la derecha: 99


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . sentencia
    3      | input . error

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    REAL           desplazar e ir al estado 8
    FOR            desplazar e ir al estado 9
    IF             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    DO             desplazar e ir al estado 12
    CASE           desplazar e ir al estado 13
    DEFAULT        desplazar e ir al estado 14
    SWITCH         desplazar e ir al estado 15
    RETURN         desplazar e ir al estado 16
    BREAK          desplazar e ir al estado 17
    CONTINUE       desplazar e ir al estado 18
    OP_DECREMENTO  desplazar e ir al estado 19
    OP_INCREMENTO  desplazar e ir al estado 20
    '-'            desplazar e ir al estado 21
    ';'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '{'            desplazar e ir al estado 24

    error       [reduce usando la regla 6 ($@1)]
    TIPO_DATO   reduce usando la regla 6 ($@1)
    TOKEN_VOID  reduce usando la regla 6 ($@1)

    numero                 ir al estado 25
    sentencia              ir al estado 26
    $@1                    ir al estado 27
    sentenciaSalto         ir al estado 28
    sentenciaSeleccion     ir al estado 29
    sentenciaEtiquetada    ir al estado 30
    sentenciaRetorno       ir al estado 31
    constante              ir al estado 32
    sentenciaIteracion     ir al estado 33
    sentenciaCompuesta     ir al estado 34
    sentenciaExpresion     ir al estado 35
    invocacionFuncion      ir al estado 36
    expresionDeAsignacion  ir al estado 37
    listaDeExpresiones     ir al estado 38
    expresion              ir al estado 39
    opPostDecremento       ir al estado 40
    opPreDecremento        ir al estado 41
    opPostIncremento       ir al estado 42
    opPreIncremento        ir al estado 43
    expresionUnaria        ir al estado 44


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    3 input: input error .
   26 sentenciaSeleccion: error .
   29 sentenciaEtiquetada: error .
   36 sentenciaIteracion: error .
   60 sentenciaCompuesta: error .
   70 sentenciaExpresion: error .
   73 invocacionFuncion: error .
   78 expresionDeAsignacion: error .
   90 listaDeExpresiones: error .
  113 expresion: error .

    $end           reduce usando la regla 3 (input)
    $end           [reduce usando la regla 26 (sentenciaSeleccion)]
    $end           [reduce usando la regla 29 (sentenciaEtiquetada)]
    $end           [reduce usando la regla 36 (sentenciaIteracion)]
    $end           [reduce usando la regla 60 (sentenciaCompuesta)]
    $end           [reduce usando la regla 70 (sentenciaExpresion)]
    error          reduce usando la regla 3 (input)
    error          [reduce usando la regla 26 (sentenciaSeleccion)]
    error          [reduce usando la regla 29 (sentenciaEtiquetada)]
    error          [reduce usando la regla 36 (sentenciaIteracion)]
    error          [reduce usando la regla 60 (sentenciaCompuesta)]
    error          [reduce usando la regla 70 (sentenciaExpresion)]
    CCHAR          reduce usando la regla 3 (input)
    CCHAR          [reduce usando la regla 26 (sentenciaSeleccion)]
    CCHAR          [reduce usando la regla 29 (sentenciaEtiquetada)]
    CCHAR          [reduce usando la regla 36 (sentenciaIteracion)]
    CCHAR          [reduce usando la regla 60 (sentenciaCompuesta)]
    CCHAR          [reduce usando la regla 70 (sentenciaExpresion)]
    NUM            reduce usando la regla 3 (input)
    NUM            [reduce usando la regla 26 (sentenciaSeleccion)]
    NUM            [reduce usando la regla 29 (sentenciaEtiquetada)]
    NUM            [reduce usando la regla 36 (sentenciaIteracion)]
    NUM            [reduce usando la regla 60 (sentenciaCompuesta)]
    NUM            [reduce usando la regla 70 (sentenciaExpresion)]
    LITERALCADENA  reduce usando la regla 3 (input)
    LITERALCADENA  [reduce usando la regla 26 (sentenciaSeleccion)]
    LITERALCADENA  [reduce usando la regla 29 (sentenciaEtiquetada)]
    LITERALCADENA  [reduce usando la regla 36 (sentenciaIteracion)]
    LITERALCADENA  [reduce usando la regla 60 (sentenciaCompuesta)]
    LITERALCADENA  [reduce usando la regla 70 (sentenciaExpresion)]
    ID             reduce usando la regla 3 (input)
    ID             [reduce usando la regla 26 (sentenciaSeleccion)]
    ID             [reduce usando la regla 29 (sentenciaEtiquetada)]
    ID             [reduce usando la regla 36 (sentenciaIteracion)]
    ID             [reduce usando la regla 60 (sentenciaCompuesta)]
    ID             [reduce usando la regla 70 (sentenciaExpresion)]
    TIPO_DATO      reduce usando la regla 3 (input)
    TIPO_DATO      [reduce usando la regla 26 (sentenciaSeleccion)]
    TIPO_DATO      [reduce usando la regla 29 (sentenciaEtiquetada)]
    TIPO_DATO      [reduce usando la regla 36 (sentenciaIteracion)]
    TIPO_DATO      [reduce usando la regla 60 (sentenciaCompuesta)]
    TIPO_DATO      [reduce usando la regla 70 (sentenciaExpresion)]
    REAL           reduce usando la regla 3 (input)
    REAL           [reduce usando la regla 26 (sentenciaSeleccion)]
    REAL           [reduce usando la regla 29 (sentenciaEtiquetada)]
    REAL           [reduce usando la regla 36 (sentenciaIteracion)]
    REAL           [reduce usando la regla 60 (sentenciaCompuesta)]
    REAL           [reduce usando la regla 70 (sentenciaExpresion)]
    TOKEN_VOID     reduce usando la regla 3 (input)
    TOKEN_VOID     [reduce usando la regla 26 (sentenciaSeleccion)]
    TOKEN_VOID     [reduce usando la regla 29 (sentenciaEtiquetada)]
    TOKEN_VOID     [reduce usando la regla 36 (sentenciaIteracion)]
    TOKEN_VOID     [reduce usando la regla 60 (sentenciaCompuesta)]
    TOKEN_VOID     [reduce usando la regla 70 (sentenciaExpresion)]
    FOR            reduce usando la regla 3 (input)
    FOR            [reduce usando la regla 26 (sentenciaSeleccion)]
    FOR            [reduce usando la regla 29 (sentenciaEtiquetada)]
    FOR            [reduce usando la regla 36 (sentenciaIteracion)]
    FOR            [reduce usando la regla 60 (sentenciaCompuesta)]
    FOR            [reduce usando la regla 70 (sentenciaExpresion)]
    IF             reduce usando la regla 3 (input)
    IF             [reduce usando la regla 26 (sentenciaSeleccion)]
    IF             [reduce usando la regla 29 (sentenciaEtiquetada)]
    IF             [reduce usando la regla 36 (sentenciaIteracion)]
    IF             [reduce usando la regla 60 (sentenciaCompuesta)]
    IF             [reduce usando la regla 70 (sentenciaExpresion)]
    WHILE          reduce usando la regla 3 (input)
    WHILE          [reduce usando la regla 26 (sentenciaSeleccion)]
    WHILE          [reduce usando la regla 29 (sentenciaEtiquetada)]
    WHILE          [reduce usando la regla 36 (sentenciaIteracion)]
    WHILE          [reduce usando la regla 60 (sentenciaCompuesta)]
    WHILE          [reduce usando la regla 70 (sentenciaExpresion)]
    DO             reduce usando la regla 3 (input)
    DO             [reduce usando la regla 26 (sentenciaSeleccion)]
    DO             [reduce usando la regla 29 (sentenciaEtiquetada)]
    DO             [reduce usando la regla 36 (sentenciaIteracion)]
    DO             [reduce usando la regla 60 (sentenciaCompuesta)]
    DO             [reduce usando la regla 70 (sentenciaExpresion)]
    CASE           reduce usando la regla 3 (input)
    CASE           [reduce usando la regla 26 (sentenciaSeleccion)]
    CASE           [reduce usando la regla 29 (sentenciaEtiquetada)]
    CASE           [reduce usando la regla 36 (sentenciaIteracion)]
    CASE           [reduce usando la regla 60 (sentenciaCompuesta)]
    CASE           [reduce usando la regla 70 (sentenciaExpresion)]
    DEFAULT        reduce usando la regla 3 (input)
    DEFAULT        [reduce usando la regla 26 (sentenciaSeleccion)]
    DEFAULT        [reduce usando la regla 29 (sentenciaEtiquetada)]
    DEFAULT        [reduce usando la regla 36 (sentenciaIteracion)]
    DEFAULT        [reduce usando la regla 60 (sentenciaCompuesta)]
    DEFAULT        [reduce usando la regla 70 (sentenciaExpresion)]
    SWITCH         reduce usando la regla 3 (input)
    SWITCH         [reduce usando la regla 26 (sentenciaSeleccion)]
    SWITCH         [reduce usando la regla 29 (sentenciaEtiquetada)]
    SWITCH         [reduce usando la regla 36 (sentenciaIteracion)]
    SWITCH         [reduce usando la regla 60 (sentenciaCompuesta)]
    SWITCH         [reduce usando la regla 70 (sentenciaExpresion)]
    RETURN         reduce usando la regla 3 (input)
    RETURN         [reduce usando la regla 26 (sentenciaSeleccion)]
    RETURN         [reduce usando la regla 29 (sentenciaEtiquetada)]
    RETURN         [reduce usando la regla 36 (sentenciaIteracion)]
    RETURN         [reduce usando la regla 60 (sentenciaCompuesta)]
    RETURN         [reduce usando la regla 70 (sentenciaExpresion)]
    BREAK          reduce usando la regla 3 (input)
    BREAK          [reduce usando la regla 26 (sentenciaSeleccion)]
    BREAK          [reduce usando la regla 29 (sentenciaEtiquetada)]
    BREAK          [reduce usando la regla 36 (sentenciaIteracion)]
    BREAK          [reduce usando la regla 60 (sentenciaCompuesta)]
    BREAK          [reduce usando la regla 70 (sentenciaExpresion)]
    CONTINUE       reduce usando la regla 3 (input)
    CONTINUE       [reduce usando la regla 26 (sentenciaSeleccion)]
    CONTINUE       [reduce usando la regla 29 (sentenciaEtiquetada)]
    CONTINUE       [reduce usando la regla 36 (sentenciaIteracion)]
    CONTINUE       [reduce usando la regla 60 (sentenciaCompuesta)]
    CONTINUE       [reduce usando la regla 70 (sentenciaExpresion)]
    OP_DECREMENTO  reduce usando la regla 3 (input)
    OP_DECREMENTO  [reduce usando la regla 26 (sentenciaSeleccion)]
    OP_DECREMENTO  [reduce usando la regla 29 (sentenciaEtiquetada)]
    OP_DECREMENTO  [reduce usando la regla 36 (sentenciaIteracion)]
    OP_DECREMENTO  [reduce usando la regla 60 (sentenciaCompuesta)]
    OP_DECREMENTO  [reduce usando la regla 70 (sentenciaExpresion)]
    OP_DECREMENTO  [reduce usando la regla 73 (invocacionFuncion)]
    OP_DECREMENTO  [reduce usando la regla 78 (expresionDeAsignacion)]
    OP_DECREMENTO  [reduce usando la regla 113 (expresion)]
    OP_INCREMENTO  reduce usando la regla 3 (input)
    OP_INCREMENTO  [reduce usando la regla 26 (sentenciaSeleccion)]
    OP_INCREMENTO  [reduce usando la regla 29 (sentenciaEtiquetada)]
    OP_INCREMENTO  [reduce usando la regla 36 (sentenciaIteracion)]
    OP_INCREMENTO  [reduce usando la regla 60 (sentenciaCompuesta)]
    OP_INCREMENTO  [reduce usando la regla 70 (sentenciaExpresion)]
    '+'            reduce usando la regla 73 (invocacionFuncion)
    '+'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '+'            [reduce usando la regla 113 (expresion)]
    '-'            reduce usando la regla 3 (input)
    '-'            [reduce usando la regla 26 (sentenciaSeleccion)]
    '-'            [reduce usando la regla 29 (sentenciaEtiquetada)]
    '-'            [reduce usando la regla 36 (sentenciaIteracion)]
    '-'            [reduce usando la regla 60 (sentenciaCompuesta)]
    '-'            [reduce usando la regla 70 (sentenciaExpresion)]
    '-'            [reduce usando la regla 73 (invocacionFuncion)]
    '-'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '-'            [reduce usando la regla 113 (expresion)]
    '*'            reduce usando la regla 73 (invocacionFuncion)
    '*'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '*'            [reduce usando la regla 113 (expresion)]
    '/'            reduce usando la regla 73 (invocacionFuncion)
    '/'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '/'            [reduce usando la regla 113 (expresion)]
    '^'            reduce usando la regla 73 (invocacionFuncion)
    '^'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '^'            [reduce usando la regla 113 (expresion)]
    '<'            reduce usando la regla 73 (invocacionFuncion)
    '<'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '<'            [reduce usando la regla 113 (expresion)]
    '>'            reduce usando la regla 73 (invocacionFuncion)
    '>'            [reduce usando la regla 78 (expresionDeAsignacion)]
    '>'            [reduce usando la regla 113 (expresion)]
    MAYORIGUAL     reduce usando la regla 73 (invocacionFuncion)
    MAYORIGUAL     [reduce usando la regla 78 (expresionDeAsignacion)]
    MAYORIGUAL     [reduce usando la regla 113 (expresion)]
    MENORIGUAL     reduce usando la regla 73 (invocacionFuncion)
    MENORIGUAL     [reduce usando la regla 78 (expresionDeAsignacion)]
    MENORIGUAL     [reduce usando la regla 113 (expresion)]
    YLOGICO        reduce usando la regla 73 (invocacionFuncion)
    YLOGICO        [reduce usando la regla 78 (expresionDeAsignacion)]
    YLOGICO        [reduce usando la regla 113 (expresion)]
    OLOGICO        reduce usando la regla 73 (invocacionFuncion)
    OLOGICO        [reduce usando la regla 78 (expresionDeAsignacion)]
    OLOGICO        [reduce usando la regla 113 (expresion)]
    ','            reduce usando la regla 73 (invocacionFuncion)
    ','            [reduce usando la regla 78 (expresionDeAsignacion)]
    ','            [reduce usando la regla 113 (expresion)]
    ';'            reduce usando la regla 3 (input)
    ';'            [reduce usando la regla 26 (sentenciaSeleccion)]
    ';'            [reduce usando la regla 29 (sentenciaEtiquetada)]
    ';'            [reduce usando la regla 36 (sentenciaIteracion)]
    ';'            [reduce usando la regla 60 (sentenciaCompuesta)]
    ';'            [reduce usando la regla 70 (sentenciaExpresion)]
    ';'            [reduce usando la regla 73 (invocacionFuncion)]
    ';'            [reduce usando la regla 78 (expresionDeAsignacion)]
    ';'            [reduce usando la regla 90 (listaDeExpresiones)]
    ';'            [reduce usando la regla 113 (expresion)]
    '('            reduce usando la regla 3 (input)
    '('            [reduce usando la regla 26 (sentenciaSeleccion)]
    '('            [reduce usando la regla 29 (sentenciaEtiquetada)]
    '('            [reduce usando la regla 36 (sentenciaIteracion)]
    '('            [reduce usando la regla 60 (sentenciaCompuesta)]
    '('            [reduce usando la regla 70 (sentenciaExpresion)]
    '{'            reduce usando la regla 3 (input)
    '{'            [reduce usando la regla 26 (sentenciaSeleccion)]
    '{'            [reduce usando la regla 29 (sentenciaEtiquetada)]
    '{'            [reduce usando la regla 36 (sentenciaIteracion)]
    '{'            [reduce usando la regla 60 (sentenciaCompuesta)]
    '{'            [reduce usando la regla 70 (sentenciaExpresion)]
    $default       reduce usando la regla 3 (input)


estado 4

   32 constante: CCHAR .

    $default  reduce usando la regla 32 (constante)


estado 5

    4 numero: NUM .

    $default  reduce usando la regla 4 (numero)


estado 6

   92 expresion: LITERALCADENA .

    $default  reduce usando la regla 92 (expresion)


estado 7

   72 invocacionFuncion: ID . $@6 segundaParteInvocacion
   77 expresionDeAsignacion: ID . opAsignacionGeneral listaDeExpresiones
   93 expresion: ID .
  116 opPostIncremento: ID . OP_INCREMENTO

    OP_INCREMENTO  desplazar e ir al estado 45
    '='            desplazar e ir al estado 46
    DIVIDIDOIGUAL  desplazar e ir al estado 47
    PORIGUAL       desplazar e ir al estado 48
    MENOSIGUAL     desplazar e ir al estado 49
    MASIGUAL       desplazar e ir al estado 50

    OP_INCREMENTO  [reduce usando la regla 93 (expresion)]
    '('            reduce usando la regla 71 ($@6)
    '('            [reduce usando la regla 93 (expresion)]
    $default       reduce usando la regla 93 (expresion)

    opAsignacion         ir al estado 51
    $@6                  ir al estado 52
    opAsignacionGeneral  ir al estado 53


estado 8

    5 numero: REAL .

    $default  reduce usando la regla 5 (numero)


estado 9

   33 sentenciaIteracion: FOR . '(' primeraExpresionFor ';' expresionOpcional ';' expresionOpcional ')' sentencia

    '('  desplazar e ir al estado 54


estado 10

   23 sentenciaSeleccion: IF . '(' expresion ')' sentencia
   24                   | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 55


estado 11

   34 sentenciaIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 56


estado 12

   35 sentenciaIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error          desplazar e ir al estado 57
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    REAL           desplazar e ir al estado 8
    FOR            desplazar e ir al estado 9
    IF             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    DO             desplazar e ir al estado 12
    CASE           desplazar e ir al estado 13
    DEFAULT        desplazar e ir al estado 14
    SWITCH         desplazar e ir al estado 15
    RETURN         desplazar e ir al estado 16
    BREAK          desplazar e ir al estado 17
    CONTINUE       desplazar e ir al estado 18
    OP_DECREMENTO  desplazar e ir al estado 19
    OP_INCREMENTO  desplazar e ir al estado 20
    '-'            desplazar e ir al estado 21
    ';'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '{'            desplazar e ir al estado 24

    error       [reduce usando la regla 6 ($@1)]
    TIPO_DATO   reduce usando la regla 6 ($@1)
    TOKEN_VOID  reduce usando la regla 6 ($@1)

    numero                 ir al estado 25
    sentencia              ir al estado 58
    $@1                    ir al estado 27
    sentenciaSalto         ir al estado 28
    sentenciaSeleccion     ir al estado 29
    sentenciaEtiquetada    ir al estado 30
    sentenciaRetorno       ir al estado 31
    constante              ir al estado 32
    sentenciaIteracion     ir al estado 33
    sentenciaCompuesta     ir al estado 34
    sentenciaExpresion     ir al estado 35
    invocacionFuncion      ir al estado 36
    expresionDeAsignacion  ir al estado 37
    listaDeExpresiones     ir al estado 38
    expresion              ir al estado 39
    opPostDecremento       ir al estado 40
    opPreDecremento        ir al estado 41
    opPostIncremento       ir al estado 42
    opPreIncremento        ir al estado 43
    expresionUnaria        ir al estado 44


estado 13

   27 sentenciaEtiquetada: CASE . constante ':' sentencia

    CCHAR  desplazar e ir al estado 4
    NUM    desplazar e ir al estado 5
    REAL   desplazar e ir al estado 8

    numero     ir al estado 25
    constante  ir al estado 59


estado 14

   28 sentenciaEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 60


estado 15

   25 sentenciaSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 61


estado 16

   30 sentenciaRetorno: RETURN . expresion ';'

    error          desplazar e ir al estado 62
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    REAL           desplazar e ir al estado 8
    OP_DECREMENTO  desplazar e ir al estado 19
    OP_INCREMENTO  desplazar e ir al estado 20
    '-'            desplazar e ir al estado 21
    '('            desplazar e ir al estado 23

    numero                 ir al estado 25
    constante              ir al estado 32
    invocacionFuncion      ir al estado 36
    expresionDeAsignacion  ir al estado 37
    expresion              ir al estado 63
    opPostDecremento       ir al estado 40
    opPreDecremento        ir al estado 41
    opPostIncremento       ir al estado 42
    opPreIncremento        ir al estado 43
    expresionUnaria        ir al estado 44


estado 17

   16 sentenciaSalto: BREAK . ';'

    ';'  desplazar e ir al estado 64


estado 18

   17 sentenciaSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 65


estado 19

  115 opPreDecremento: OP_DECREMENTO . ID

    ID  desplazar e ir al estado 66


estado 20

  117 opPreIncremento: OP_INCREMENTO . ID

    ID  desplazar e ir al estado 67


estado 21

  118 expresionUnaria: '-' . expresion
